# ChangeLog for net-mail/dovecot
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.173 2008/07/29 19:09:19 bluebird Exp $

  29 Jul 2008; Friedrich Oslage <bluebird@gentoo.org>
  dovecot-1.0.15-r1.ebuild, dovecot-1.1.1-r1.ebuild:
  Stable on sparc, bug #231494

*dovecot-1.1.2 (28 Jul 2008)

  28 Jul 2008; Wolfram Schlich <wschlich@gentoo.org> +dovecot-1.1.2.ebuild:
  version bump

  16 Jul 2008; Luca Longinotti <chtekk@gentoo.org> dovecot-1.0.13-r1.ebuild,
  dovecot-1.0.15-r1.ebuild, dovecot-1.1.1-r1.ebuild:
  Dep on PostgreSQL libs only.

*dovecot-1.0.15-r1 (08 Jul 2008)

  08 Jul 2008; Wolfram Schlich <wschlich@gentoo.org> -dovecot-1.0.15.ebuild,
  +dovecot-1.0.15-r1.ebuild, dovecot-1.1.1-r1.ebuild:
  /etc/pam.d/managesieve symlink: fix handling for 1.1, added for 1.0

*dovecot-1.1.1-r1 (08 Jul 2008)

  08 Jul 2008; Wolfram Schlich <wschlich@gentoo.org> -dovecot-1.1.1.ebuild,
  +dovecot-1.1.1-r1.ebuild:
  fix bugs #229067 and #230375

*dovecot-1.1.1 (23 Jun 2008)
*dovecot-1.0.15 (23 Jun 2008)

  23 Jun 2008; Wolfram Schlich <wschlich@gentoo.org> -dovecot-1.0.14.ebuild,
  +dovecot-1.0.15.ebuild, -dovecot-1.1_rc10.ebuild, +dovecot-1.1.1.ebuild:
  version bump, removed old versions

*dovecot-1.1_rc10 (17 Jun 2008)

  17 Jun 2008; Wolfram Schlich <wschlich@gentoo.org>
  -files/dovecot-1.1_rc8-mbox-fixup.patch, -dovecot-1.1_rc8.ebuild,
  +dovecot-1.1_rc10.ebuild:
  version bump

*dovecot-1.1_rc8 (04 Jun 2008)
*dovecot-1.0.14 (04 Jun 2008)

  04 Jun 2008; Wolfram Schlich <wschlich@gentoo.org>
  +files/dovecot-1.1_rc8-mbox-fixup.patch, -dovecot-1.0.13-r5.ebuild,
  +dovecot-1.0.14.ebuild, -dovecot-1.1_rc6.ebuild, +dovecot-1.1_rc8.ebuild:
  version bump

  01 Jun 2008; Wolfram Schlich <wschlich@gentoo.org>
  -dovecot-1.1_rc5-r1.ebuild, +dovecot-1.1_rc6.ebuild:
  version bump

*dovecot-1.1_rc6 (01 Jun 2008)
