@@ -14,8 +14,8 @@ DIST dovecot-sieve-1.0.2.tar.gz 451753 RMD160 8bed283ae672aafa61271f154f1f58d200
 DIST dovecot-sieve-1.0.3.tar.gz 455806 RMD160 b575a1181fb2389a47db4cdd2815a47a2fe30b91 SHA1 48f67c33c08689c50a254bc6faeecba407d12294 SHA256 3f9e23abc64e7ae70343144b9a20f8da50aa102e3d9b85774ddd8ac0d1480fe1
 DIST dovecot-sieve-1.1.5.tar.gz 468913 RMD160 825a8ec07d49527d8551cb5f3f86b638fddbafbd SHA1 672adf0a2f1627d96f97fc63fecaf024dd9f7a42 SHA256 ec1ea94311d5fb6cb5dd7e451728784afb39521a6a580f640b4d2115505a5ddf
 EBUILD dovecot-1.0.13-r1.ebuild 7264 RMD160 425e44c901f892c18dd2937b9f68f5e7c275d869 SHA1 067aad2e0bc8144ccf77a4b26fc2b7b277d95ff0 SHA256 c3fcfd5d1c0f1b65229804ca3c8432a89dd65134a5ce75c8614c3f295efa087e
-EBUILD dovecot-1.0.15-r1.ebuild 7357 RMD160 179369cbe240d96ebf56888b502b3783626b363f SHA1 c02b084693561aa0baddfd2216671ada9410a665 SHA256 a000468eaf1ba58c2f79b58d6ad120a118c87329b7b4ccf00a07519bf39d5ce7
-EBUILD dovecot-1.1.1-r1.ebuild 7975 RMD160 a2aa8659a356674de83022302170dfaa666c59fa SHA1 2587111c1b855a21dbdaf5e0bb2d9327fd53c7c1 SHA256 4954029a69fe3dd8bc27c62b6d24a2ef1f848fd5e7f88b62657af4a3f754bc17
+EBUILD dovecot-1.0.15-r1.ebuild 7354 RMD160 537adacf44cae7ab02c5890d759bc8de177718dc SHA1 1b60f7a2736e7f12c3d0c53e52c39499aacda6ef SHA256 c13c636b2b81f07fdd2929d70cd4ad0e11ad3846cb77553a35f3deb3e293338a
+EBUILD dovecot-1.1.1-r1.ebuild 7972 RMD160 0c29cdf1cef5766f727c3fae9ee74112c7a83485 SHA1 da8ae0559c998aea5af40db35147c5652f0d17ba SHA256 0606d8256d9d56de657eb25e9e80403d302c1dd5d3fbacda79a52591c67c87e3
 EBUILD dovecot-1.1.2.ebuild 7973 RMD160 9c646fe5c78104149298c003d2c87be05a07f26e SHA1 4cde9b4ce1e02ab8606c97a542f5c161a3e0d6aa SHA256 046a93a20c622345a11660a8a0f638bf8b6a1a01e7fc05d305d36501508901c8
-MISC ChangeLog 28481 RMD160 4495e87b28f60b242752cec347896416de4cfcd7 SHA1 1c7a44138aed56dca5425b9f1b8391ed606f43bb SHA256 bdd76be8d264cc442415ebae0c7dbd395040596b006bcf8f57a1f02b3d441104
+MISC ChangeLog 28606 RMD160 ce240f1c8cb570c3d2ac1d8daf067da67f4e69c5 SHA1 7e793c22a28543325822c18b256a5ead51b992ce SHA256 f82e965128dd8da285df5801c5cfd7c997f93da567c418792f504aa462420876
 MISC metadata.xml 307 RMD160 ed31b92a1f8c8c5c1cc6166bc0136dd03299bb9b SHA1 ac1cb79f5d3340ed9a9d3117531c1c7fa2af8edf SHA256 180d5598a7d709bf7969219969218d54d7283af53b238bf74c3f7223ca2190ef
