@@ -1,6 +1,10 @@
 # ChangeLog for net-mail/dovecot
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.173 2008/07/29 19:09:19 bluebird Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/dovecot/ChangeLog,v 1.174 2008/08/01 17:51:02 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> dovecot-1.0.15-r1.ebuild,
+  dovecot-1.1.1-r1.ebuild:
+  Stable on ppc wrt bug 231494
 
   29 Jul 2008; Friedrich Oslage <bluebird@gentoo.org>
   dovecot-1.0.15-r1.ebuild, dovecot-1.1.1-r1.ebuild:
